@@ -109,12 +109,19 @@
           </packing>
         </child>
         <child>
-          <widget class="Gtk.Statusbar" id="statusbar1">
+          <widget class="Gtk.Statusbar" id="status_bar">
             <property name="MemberName" />
             <property name="Spacing">6</property>
             <property name="HasResizeGrip">False</property>
             <child>
-              <placeholder />
+              <widget class="Gtk.ProgressBar" id="progress_bar">
+                <property name="MemberName" />
+                <property name="Visible">False</property>
+              </widget>
+              <packing>
+                <property name="Position">1</property>
+                <property name="AutoSize">True</property>
+              </packing>
             </child>
             <child>
               <placeholder />
